fix: rebuild tests after compiler warnings check
The 'Check for compiler warnings' step runs 'make clean' which removes
the test binaries. Added a step to rebuild tests before the valgrind
memory leak check to ensure the test binary exists.

This fixes the CI failure where valgrind couldn't find ./build/test/test_basic.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,9 @@ jobs:
         make -f Makefile.lib clean
         make -f Makefile.lib CFLAGS="-Wall -Wextra -Werror -O2 -Iinclude" lib
 
+    - name: Rebuild tests for valgrind
+      run: make -f Makefile.lib tests
+
     - name: Memory leak check (basic test)
       run: |
         valgrind --leak-check=full --error-exitcode=1 --quiet ./build/test/test_basic
